added template for the tourist spots

--- a/index.html
+++ b/index.html
@@ -3,19 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Explore South Korea</title>
     <link rel="icon" href="images/Core-01.png" type="image/png">
-    <script src="https://kit.fontawesome.com/8d34340562.js"
-    crossorigin="anonymous">
-    </script>
+    <link rel="stylesheet" href="styles/basic.css">
+    <link rel="stylesheet" href="styles/homepage.css">
+
 </head>
 <body>
     <header>
-
+        <h1>Discover South Korea</h1>
+        <p>Explore the best tourist spots &amp; historical landmarks</p>
     </header>
-    <body>
-
-    </body>
+    <nav>
+        <ul>
+            <li><a href="#palace">Gyeongbokgung Palace</a></li>
+            <li><a href="#tower">N Seoul Tower</a></li>
+            <li><a href="#hanok">Bukchon Hanok Village</a></li>
+            <li><a href="#jeju">Jeju Island</a></li>
+            <li><a href="#dmz">DMZ Tour</a></li>
+            <li><a href="#bulguksa">Bulguksa Temple</a></li>
+        </ul>
+    </nav>
+    <section class="container grid">
+        <article class="card" id="palace">
+            <img src="pictures/gyeongbokgung.jpg" alt="Gyeongbokgung Palace">
+            <div class="card_content">
+                <h3>Gyeongbokgung Palace</h3>
+                <p>The grandest of Seoul's Five Grand Palaces, built in 1395 and rebuilt after the Imjin War.</p>
+                <a href="https://en.wikipedia.org/wiki/Gyeongbokgung" target="_blank">Learn More</a>
+            </div>
+        </article>
+    </section>
     <footer>
 
     </footer>
