--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <section class="container grid">
         <article class="card" id="palace">
-            <img src="pictures/gyeongbokgung.jpg" alt="Gyeongbokgung Palace">
+            <img src="https://plus.unsplash.com/premium_photo-1661948404806-391a240d6d40?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gyeongbokgung Palace">
             <div class="card_content">
                 <h3>Gyeongbokgung Palace</h3>
                 <p>The grandest of Seoul's Five Grand Palaces, built in 1395 and rebuilt after the Imjin War.</p>
