header buttons added

--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
         <h1>Discover South Korea</h1>
         <p>Explore the best tourist spots &amp; historical landmarks</p>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#palace">Gyeongbokgung Palace</a></li>
-            <li><a href="#tower">N Seoul Tower</a></li>
-            <li><a href="#hanok">Bukchon Hanok Village</a></li>
-            <li><a href="#jeju">Jeju Island</a></li>
-            <li><a href="#dmz">DMZ Tour</a></li>
-            <li><a href="#bulguksa">Bulguksa Temple</a></li>
-        </ul>
-    </nav>
+    <div class="buttons_container">
+        <a href="#palace" class="icon_button">Gyeongbokgung Palace</a>
+        <a href="#tower" class="icon_button">N Seoul Tower</a>
+        <a href="#hanok" class="icon_button">Bukchon Hanok Village</a>
+        <a href="#jeju" class="icon_button">Jeju Island</a>
+        <a href="#dmz" class="icon_button">DMZ Tour</a>
+        <a href="#bulguksa" class="icon_button">Bulguksa Temple</a>
+    </div>
     <section class="container grid">
         <article class="card" id="palace">
             <img src="https://plus.unsplash.com/premium_photo-1661948404806-391a240d6d40?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gyeongbokgung Palace">
