--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
             <img src="https://plus.unsplash.com/premium_photo-1661948404806-391a240d6d40?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gyeongbokgung Palace">
             <div class="card_content">
                 <h3>Gyeongbokgung Palace</h3>
-                <p>The grandest of Seoul's Five Grand Palaces, built in 1395 and rebuilt after the Imjin War.</p>
+                <p class="desc_short">
+                    The grandest of Seoul's Five Grand Palaces, built in 1395 and rebuilt after the Imjin War.
+                </p>
+                <p class="desc_full">
+                    The grandest of Seoul's Five Grand Palaces, originally constructed in 1395 during the Joseon Dynasty. It was destroyed during the Imjin War (1592-1598) and later reconstructed by Emperor Gojong in the 19th century. Today it features the Geunjeongjeon Throne Hall, and the National Palace Museum.
+                </p>
+                <button class="more_btn">Read more</button>
                 <a href="https://en.wikipedia.org/wiki/Gyeongbokgung" target="_blank">Learn More</a>
             </div>
         </article>
@@ -35,5 +41,25 @@
     <footer>
 
     </footer>
+    <script>
+        document.querySelectorAll('.more_btn').forEach(btn => {
+            btn.addEventListener('click', () => {
+                const card = btn.closest('.card_content');
+                const shortP = card.querySelector('.desc_short');
+                const fullP = card.querySelector('.desc_full');
+
+                if(fullP.style.display === 'block') {
+                    fullP.style.display = 'none';
+                    shortP.style.display = '';
+                    btn.textContent = 'Read more';
+                }
+                else {
+                    fullP.style.display = 'block';
+                    shortP.style.display = 'none';
+                    btn.textContent = 'Read less';
+                }
+            });
+        });
+    </script>
 </body>
 </html>
