--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
                 <a href="https://en.wikipedia.org/wiki/Gyeongbokgung" target="_blank">Learn More</a>
             </div>
         </article>
+        <article>
+            <img src="">
+            <div>
+                <h3></h3>
+                <p>
+
+                </p>
+                <p>
+
+                </p>
+                <button></button>
+                <a></a>
+            </div>
+        </article>
     </section>
     <footer>
 
