added all locations

--- a/index.html
+++ b/index.html
@@ -37,18 +37,74 @@
                 <a href="https://en.wikipedia.org/wiki/Gyeongbokgung" target="_blank">Learn More</a>
             </div>
         </article>
-        <article>
-            <img src="">
-            <div>
-                <h3></h3>
+        <article class="card" id="tower">
+            <img src="" alt="N Seoul Tower">
+            <div class="card_content">
+                <h3>N Seoul Tower</h3>
                 <p>
-
+                    Iconic observation tower offering panoramic views of Seoul's skyline.
                 </p>
                 <p>
 
                 </p>
                 <button></button>
-                <a></a>
+                <a href="https://en.wikipedia.org/wiki/N_Seoul_Tower" target="_blank">Learn More</a>
+            </div>
+        </article>
+        <article class="card" id="hanok">
+            <img>
+            <div class="card_content">
+                <h3>Bukchon Hanok Village</h3>
+                <p>
+                    A preserved area showcasing traditional Korean houses in the heart of Seoul.
+                </p>
+                <p>
+
+                </p>
+                <button></button>
+                <a href="https://en.wikipedia.org/wiki/Bukchon_Hanok_Village" target="_blank">Learn More</a>
+            </div>
+        </article>
+        <article class="card" id="jeju">
+            <img>
+            <div class="card_content">
+                <h3>Jeju Island</h3>
+                <p>
+                    Volcanic island known for its beaches, lava tubes, and scenic landscapes.
+                </p>
+                <p>
+
+                </p>
+                <button></button>
+                <a href="https://en.wikipedia.org/wiki/Jeju_Island" target="_blank">Learn More</a>
+            </div>
+        </article>
+        <article class="card" id="dmz">
+            <img>
+            <div class="card_content">
+                <h3>DMZ Tour</h3>
+                <p>
+                    A guided tour of the Demilitarized Zone between North and South Korea.
+                </p>
+                <p>
+
+                </p>
+                <button></button>
+                <a href="https://en.wikipedia.org/wiki/Korean_Demilitarized_Zone" target="_blank">Learn More</a>
+            </div>
+        </article>
+        <article class="card" id="bulguksa">
+            <img>
+            <div class="card_content">
+                <h3>Bulguksa Temple</h3>
+                <p>
+                    An ancient Buddhist temple in Gyeongju, designated a UNESCO World Heritage site.
+                </p>
+                <p>
+
+                </p>
+                <button></button>
+                <a href="https://en.wikipedia.org/wiki/Bulguksa" target="_blank">Learn More</a>
             </div>
         </article>
     </section>
