--- a/index.html
+++ b/index.html
@@ -31,79 +31,80 @@
                     The grandest of Seoul's Five Grand Palaces, built in 1395 and rebuilt after the Imjin War.
                 </p>
                 <p class="desc_full">
-                    The grandest of Seoul's Five Grand Palaces, originally constructed in 1395 during the Joseon Dynasty. It was destroyed during the Imjin War (1592-1598) and later reconstructed by Emperor Gojong in the 19th century. Today it features the Geunjeongjeon Throne Hall, and the National Palace Museum.
+                    Gyeongbokgung Palace, meaning “Palace Greatly Blessed by Heaven,” was commissioned by King Taejo in 1395 as the principal seat of the Joseon dynasty and symbol of its sovereignty. The palace was razed by Japanese forces during the Imjin War in 1592 and lay in ruins for nearly three centuries before being restored under King Gojong in 1867, with new structures like Geoncheonggung and Taewonjeon added during that period. A comprehensive revival began in the 1990s—culminating most recently in the 2023 restoration of the Gyejodang Hall—returning key sections such as Gwanghwamun Gate, Heungnyemun Gate, and Hyangwonjeong Pavilion to their historic glory.
+                    Architecturally, Gyeongbokgung melds grand ceremonial spaces—like the Geunjeongjeon Throne Hall—with serene garden pavilions such as the hexagonal Hyangwonjeong surrounded by a lotus-filled pond, conveying a harmonious balance of power and nature. Today, the palace hosts the National Palace Museum and the Royal Guard Changing Ceremony, drawing millions of visitors annually to experience its layered history and reconstructed beauty.
                 </p>
                 <button class="more_btn">Read more</button>
                 <a href="https://en.wikipedia.org/wiki/Gyeongbokgung" target="_blank">Learn More</a>
             </div>
         </article>
         <article class="card" id="tower">
-            <img src="" alt="N Seoul Tower">
+            <img src="https://images.unsplash.com/photo-1635686692794-b0ce6337386b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="N Seoul Tower">
             <div class="card_content">
                 <h3>N Seoul Tower</h3>
-                <p>
+                <p class="desc_short">
                     Iconic observation tower offering panoramic views of Seoul's skyline.
                 </p>
-                <p>
+                <p class="desc_full">
 
                 </p>
-                <button></button>
+                <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/N_Seoul_Tower" target="_blank">Learn More</a>
             </div>
         </article>
         <article class="card" id="hanok">
-            <img>
+            <img src="https://images.unsplash.com/photo-1670735411734-c9725326de3f?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bukchon Hanok Village">
             <div class="card_content">
                 <h3>Bukchon Hanok Village</h3>
-                <p>
+                <p class="desc_short">
                     A preserved area showcasing traditional Korean houses in the heart of Seoul.
                 </p>
-                <p>
+                <p class="desc_full">
 
                 </p>
-                <button></button>
+                <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Bukchon_Hanok_Village" target="_blank">Learn More</a>
             </div>
         </article>
         <article class="card" id="jeju">
-            <img>
+            <img src="https://images.unsplash.com/photo-1612977512598-3b8d6a498bbb?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Jeju Island">
             <div class="card_content">
                 <h3>Jeju Island</h3>
-                <p>
+                <p class="desc_short">
                     Volcanic island known for its beaches, lava tubes, and scenic landscapes.
                 </p>
-                <p>
+                <p class="desc_full">
 
                 </p>
-                <button></button>
+                <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Jeju_Island" target="_blank">Learn More</a>
             </div>
         </article>
         <article class="card" id="dmz">
-            <img>
+            <img src="https://images.unsplash.com/photo-1722204272233-d15cf38fb34e?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="DMZ Tour">
             <div class="card_content">
                 <h3>DMZ Tour</h3>
-                <p>
+                <p class="desc_short">
                     A guided tour of the Demilitarized Zone between North and South Korea.
                 </p>
-                <p>
+                <p class="desc_full">
 
                 </p>
-                <button></button>
+                <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Korean_Demilitarized_Zone" target="_blank">Learn More</a>
             </div>
         </article>
         <article class="card" id="bulguksa">
-            <img>
+            <img src="https://images.unsplash.com/photo-1684134549350-be5fd0d8feaa?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bulguksa Temple">
             <div class="card_content">
                 <h3>Bulguksa Temple</h3>
-                <p>
+                <p class="desc_short">
                     An ancient Buddhist temple in Gyeongju, designated a UNESCO World Heritage site.
                 </p>
-                <p>
+                <p class="desc_full">
 
                 </p>
-                <button></button>
+                <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Bulguksa" target="_blank">Learn More</a>
             </div>
         </article>
