--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                     The grandest of Seoul's Five Grand Palaces, built in 1395 and rebuilt after the Imjin War.
                 </p>
                 <p class="desc_full">
-                    Gyeongbokgung Palace, meaning “Palace Greatly Blessed by Heaven,” was commissioned by King Taejo in 1395 as the principal seat of the Joseon dynasty and symbol of its sovereignty. The palace was razed by Japanese forces during the Imjin War in 1592 and lay in ruins for nearly three centuries before being restored under King Gojong in 1867, with new structures like Geoncheonggung and Taewonjeon added during that period. A comprehensive revival began in the 1990s—culminating most recently in the 2023 restoration of the Gyejodang Hall—returning key sections such as Gwanghwamun Gate, Heungnyemun Gate, and Hyangwonjeong Pavilion to their historic glory.
-                    Architecturally, Gyeongbokgung melds grand ceremonial spaces—like the Geunjeongjeon Throne Hall—with serene garden pavilions such as the hexagonal Hyangwonjeong surrounded by a lotus-filled pond, conveying a harmonious balance of power and nature. Today, the palace hosts the National Palace Museum and the Royal Guard Changing Ceremony, drawing millions of visitors annually to experience its layered history and reconstructed beauty.
+                    Gyeongbokgung, established in 1395 as the principal palace of the Joseon dynasty, was razed during the 1592 Imjin War and largely reconstructed from the 1990s onward to its former grandeur. Today, visitors explore its majestic Geunjeongkeon Throne Hall, the lotus-surrounded Hyangwoonjeong Pavilion, and can witness the daily Royal Guard Changing Ceremony.
                 </p>
                 <button class="more_btn">Read more</button>
                 <a href="https://en.wikipedia.org/wiki/Gyeongbokgung" target="_blank">Learn More</a>
@@ -46,7 +45,7 @@
                     Iconic observation tower offering panoramic views of Seoul's skyline.
                 </p>
                 <p class="desc_full">
-
+                    Built in 1971 as South Korea's first general radio-wave tower, N Seoul Tower rises 236.7 m above sea level atop Namsan Mountain and opened to the public in 1980. Its multiple observation decks, revolving restaurant, and famed "Locks of Love" terrace now draw over eight million visitors annually.
                 </p>
                 <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/N_Seoul_Tower" target="_blank">Learn More</a>
@@ -60,7 +59,7 @@
                     A preserved area showcasing traditional Korean houses in the heart of Seoul.
                 </p>
                 <p class="desc_full">
-
+                    Bukchon Hanok Village in Jongno, Seoul, preserves over 900 traditional hanok homes dating from the early 20th century, blending living heritage with artisan workshops and teahouses. To manage overtourism (6.4 million visitors in 2024), non-guesthouse visitors may now only enter between 10 a.m. and 5 p.m., respecting its roughly 6,100 residents.
                 </p>
                 <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Bukchon_Hanok_Village" target="_blank">Learn More</a>
@@ -74,7 +73,7 @@
                     Volcanic island known for its beaches, lava tubes, and scenic landscapes.
                 </p>
                 <p class="desc_full">
-
+                    Jeju Island, covering 1,833.2 km² as South Korea's largest island, is defined by its Hallasan shield volcano (1,950 m) and extensive lava tube networks designated as a UNESCO World Heritage Site. A subtropical climate, unique haenyeo women-diving traditions, and landmarks like Seongsan Ilchulbong and Cheonjiyeon Waterfall make it a premier honeymoon and eco-tourism destination.
                 </p>
                 <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Jeju_Island" target="_blank">Learn More</a>
@@ -88,7 +87,7 @@
                     A guided tour of the Demilitarized Zone between North and South Korea.
                 </p>
                 <p class="desc_full">
-
+                    The Korean Demilitarized Zone is a 250 km long, 4 km wide buffer established under the 1953 Armistice Agreement along the 38th parallel, heavily fortified yet home to rare wildlife sanctuaries. Guided excursions from Seoul visit the Joint Security Area (Panmunjom), the Third Infiltration Tunnel, and Dora Observatory, offering poignant insights into Korea's divided history.
                 </p>
                 <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Korean_Demilitarized_Zone" target="_blank">Learn More</a>
@@ -102,7 +101,7 @@
                     An ancient Buddhist temple in Gyeongju, designated a UNESCO World Heritage site.
                 </p>
                 <p class="desc_full">
-
+                    Founded in 751 on Tohamsan in Gyeongju by Prime Minister Kim Daeseong, Bulguksa is a masterpiece of Silla-era Buddhist art, housing six National Treasures including the ornate Dabotap and Seokgatap pagodas. Inscribed as a UNESCO World Heritage site in 1995, its celebrated Blue Cloud and White Cloud Bridges and gilt-bronze Buddha statues welcome over two million pilgrims and tourists each year.
                 </p>
                 <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Bulguksa" target="_blank">Learn More</a>
