--- a/index.html
+++ b/index.html
@@ -12,104 +12,131 @@
 <body>
     <header>
         <h1>Discover South Korea</h1>
-        <p>Explore the best tourist spots &amp; historical landmarks</p>
+        <p>Tourist Spots · Korean Foods · Famous Koreans</p>
     </header>
     <div class="buttons_container">
-        <a href="#palace" class="icon_button">Gyeongbokgung Palace</a>
-        <a href="#tower" class="icon_button">N Seoul Tower</a>
-        <a href="#hanok" class="icon_button">Bukchon Hanok Village</a>
-        <a href="#jeju" class="icon_button">Jeju Island</a>
-        <a href="#dmz" class="icon_button">DMZ Tour</a>
-        <a href="#bulguksa" class="icon_button">Bulguksa Temple</a>
+        <a href="#spots" class="icon_button">Tourist Spots</a>
+        <a href="#foods" class="icon_button">Korean Foods</a>
+        <a href="#people" class="icon_button">Famous Koreans</a>
     </div>
-    <section class="container grid">
-        <article class="card" id="palace">
-            <img src="https://plus.unsplash.com/premium_photo-1661948404806-391a240d6d40?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gyeongbokgung Palace">
-            <div class="card_content">
-                <h3>Gyeongbokgung Palace</h3>
-                <p class="desc_short">
-                    The grandest of Seoul's Five Grand Palaces, built in 1395 and rebuilt after the Imjin War.
-                </p>
-                <p class="desc_full">
-                    Gyeongbokgung, established in 1395 as the principal palace of the Joseon dynasty, was razed during the 1592 Imjin War and largely reconstructed from the 1990s onward to its former grandeur. Today, visitors explore its majestic Geunjeongkeon Throne Hall, the lotus-surrounded Hyangwoonjeong Pavilion, and can witness the daily Royal Guard Changing Ceremony.
-                </p>
-                <button class="more_btn">Read more</button>
-                <a href="https://en.wikipedia.org/wiki/Gyeongbokgung" target="_blank">Learn More</a>
-            </div>
-        </article>
-        <article class="card" id="tower">
-            <img src="https://images.unsplash.com/photo-1635686692794-b0ce6337386b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="N Seoul Tower">
-            <div class="card_content">
-                <h3>N Seoul Tower</h3>
-                <p class="desc_short">
-                    Iconic observation tower offering panoramic views of Seoul's skyline.
-                </p>
-                <p class="desc_full">
-                    Built in 1971 as South Korea's first general radio-wave tower, N Seoul Tower rises 236.7 m above sea level atop Namsan Mountain and opened to the public in 1980. Its multiple observation decks, revolving restaurant, and famed "Locks of Love" terrace now draw over eight million visitors annually.
-                </p>
-                <button class="more_btn">Read More</button>
-                <a href="https://en.wikipedia.org/wiki/N_Seoul_Tower" target="_blank">Learn More</a>
-            </div>
-        </article>
-        <article class="card" id="hanok">
-            <img src="https://images.unsplash.com/photo-1670735411734-c9725326de3f?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bukchon Hanok Village">
-            <div class="card_content">
-                <h3>Bukchon Hanok Village</h3>
-                <p class="desc_short">
-                    A preserved area showcasing traditional Korean houses in the heart of Seoul.
-                </p>
-                <p class="desc_full">
-                    Bukchon Hanok Village in Jongno, Seoul, preserves over 900 traditional hanok homes dating from the early 20th century, blending living heritage with artisan workshops and teahouses. To manage overtourism (6.4 million visitors in 2024), non-guesthouse visitors may now only enter between 10 a.m. and 5 p.m., respecting its roughly 6,100 residents.
-                </p>
-                <button class="more_btn">Read More</button>
-                <a href="https://en.wikipedia.org/wiki/Bukchon_Hanok_Village" target="_blank">Learn More</a>
-            </div>
-        </article>
-        <article class="card" id="jeju">
-            <img src="https://images.unsplash.com/photo-1612977512598-3b8d6a498bbb?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Jeju Island">
-            <div class="card_content">
-                <h3>Jeju Island</h3>
-                <p class="desc_short">
-                    Volcanic island known for its beaches, lava tubes, and scenic landscapes.
-                </p>
-                <p class="desc_full">
-                    Jeju Island, covering 1,833.2 km² as South Korea's largest island, is defined by its Hallasan shield volcano (1,950 m) and extensive lava tube networks designated as a UNESCO World Heritage Site. A subtropical climate, unique haenyeo women-diving traditions, and landmarks like Seongsan Ilchulbong and Cheonjiyeon Waterfall make it a premier honeymoon and eco-tourism destination.
-                </p>
-                <button class="more_btn">Read More</button>
-                <a href="https://en.wikipedia.org/wiki/Jeju_Island" target="_blank">Learn More</a>
-            </div>
-        </article>
-        <article class="card" id="dmz">
-            <img src="https://images.unsplash.com/photo-1722204272233-d15cf38fb34e?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="DMZ Tour">
-            <div class="card_content">
-                <h3>DMZ Tour</h3>
-                <p class="desc_short">
-                    A guided tour of the Demilitarized Zone between North and South Korea.
-                </p>
-                <p class="desc_full">
-                    The Korean Demilitarized Zone is a 250 km long, 4 km wide buffer established under the 1953 Armistice Agreement along the 38th parallel, heavily fortified yet home to rare wildlife sanctuaries. Guided excursions from Seoul visit the Joint Security Area (Panmunjom), the Third Infiltration Tunnel, and Dora Observatory, offering poignant insights into Korea's divided history.
-                </p>
-                <button class="more_btn">Read More</button>
-                <a href="https://en.wikipedia.org/wiki/Korean_Demilitarized_Zone" target="_blank">Learn More</a>
-            </div>
-        </article>
-        <article class="card" id="bulguksa">
-            <img src="https://images.unsplash.com/photo-1684134549350-be5fd0d8feaa?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bulguksa Temple">
-            <div class="card_content">
-                <h3>Bulguksa Temple</h3>
-                <p class="desc_short">
-                    An ancient Buddhist temple in Gyeongju, designated a UNESCO World Heritage site.
-                </p>
-                <p class="desc_full">
-                    Founded in 751 on Tohamsan in Gyeongju by Prime Minister Kim Daeseong, Bulguksa is a masterpiece of Silla-era Buddhist art, housing six National Treasures including the ornate Dabotap and Seokgatap pagodas. Inscribed as a UNESCO World Heritage site in 1995, its celebrated Blue Cloud and White Cloud Bridges and gilt-bronze Buddha statues welcome over two million pilgrims and tourists each year.
-                </p>
-                <button class="more_btn">Read More</button>
-                <a href="https://en.wikipedia.org/wiki/Bulguksa" target="_blank">Learn More</a>
-            </div>
-        </article>
-    </section>
-    <footer>
+    <main class="container">
+        <section class="intro" id="intro">
+            <h2>Welcome to South Korea</h2>
+            <p>
+                Nestled on the Korean Peninsula between mountains and sea, South Korea seamlessly blends
+                over five millennia of dynastic heritage-seen in its palaces, temples, and folk villages-with
+                cutting-edge urban energy in Seoul, Busan, and beyond. From the volcanic landscapes of Jeju
+                Island to the culinary delights of kimchi and bibimbap, and the global influence of K-Pop and
+                cinema, Korea invites you to explore its traditions, innovations, and warm hospitality.
+            </p>
+        </section>
 
+        <section id="spots">
+            <h2>Top Tourist Spots</h2>
+            <div class="grid">
+                <article class="card" id="palace">
+                    <img src="https://plus.unsplash.com/premium_photo-1661948404806-391a240d6d40?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gyeongbokgung Palace">
+                    <div class="card_content">
+                        <h3>Gyeongbokgung Palace</h3>
+                        <p class="desc_short">
+                            The grandest of Seoul's Five Grand Palaces, built in 1395 and rebuilt after the Imjin War.
+                        </p>
+                        <p class="desc_full">
+                            Gyeongbokgung, established in 1395 as the principal palace of the Joseon dynasty, was razed during the 1592 Imjin War and largely reconstructed from the 1990s onward to its former grandeur. Today, visitors explore its majestic Geunjeongkeon Throne Hall, the lotus-surrounded Hyangwoonjeong Pavilion, and can witness the daily Royal Guard Changing Ceremony.
+                        </p>
+                        <button class="more_btn">Read more</button>
+                        <a href="https://en.wikipedia.org/wiki/Gyeongbokgung" target="_blank">Learn More</a>
+                    </div>
+                </article>
+                <article class="card" id="tower">
+                    <img src="https://images.unsplash.com/photo-1635686692794-b0ce6337386b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="N Seoul Tower">
+                    <div class="card_content">
+                        <h3>N Seoul Tower</h3>
+                        <p class="desc_short">
+                            Iconic observation tower offering panoramic views of Seoul's skyline.
+                        </p>
+                        <p class="desc_full">
+                            Built in 1971 as South Korea's first general radio-wave tower, N Seoul Tower rises 236.7 m above sea level atop Namsan Mountain and opened to the public in 1980. Its multiple observation decks, revolving restaurant, and famed "Locks of Love" terrace now draw over eight million visitors annually.
+                        </p>
+                        <button class="more_btn">Read More</button>
+                        <a href="https://en.wikipedia.org/wiki/N_Seoul_Tower" target="_blank">Learn More</a>
+                    </div>
+                </article>
+                <article class="card" id="hanok">
+                    <img src="https://images.unsplash.com/photo-1670735411734-c9725326de3f?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bukchon Hanok Village">
+                    <div class="card_content">
+                        <h3>Bukchon Hanok Village</h3>
+                        <p class="desc_short">
+                            A preserved area showcasing traditional Korean houses in the heart of Seoul.
+                        </p>
+                        <p class="desc_full">
+                            Bukchon Hanok Village in Jongno, Seoul, preserves over 900 traditional hanok homes dating from the early 20th century, blending living heritage with artisan workshops and teahouses. To manage overtourism (6.4 million visitors in 2024), non-guesthouse visitors may now only enter between 10 a.m. and 5 p.m., respecting its roughly 6,100 residents.
+                        </p>
+                        <button class="more_btn">Read More</button>
+                        <a href="https://en.wikipedia.org/wiki/Bukchon_Hanok_Village" target="_blank">Learn More</a>
+                    </div>
+                </article>
+                <article class="card" id="jeju">
+                    <img src="https://images.unsplash.com/photo-1612977512598-3b8d6a498bbb?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Jeju Island">
+                    <div class="card_content">
+                        <h3>Jeju Island</h3>
+                        <p class="desc_short">
+                            Volcanic island known for its beaches, lava tubes, and scenic landscapes.
+                        </p>
+                        <p class="desc_full">
+                            Jeju Island, covering 1,833.2 km² as South Korea's largest island, is defined by its Hallasan shield volcano (1,950 m) and extensive lava tube networks designated as a UNESCO World Heritage Site. A subtropical climate, unique haenyeo women-diving traditions, and landmarks like Seongsan Ilchulbong and Cheonjiyeon Waterfall make it a premier honeymoon and eco-tourism destination.
+                        </p>
+                        <button class="more_btn">Read More</button>
+                        <a href="https://en.wikipedia.org/wiki/Jeju_Island" target="_blank">Learn More</a>
+                    </div>
+                </article>
+                <article class="card" id="dmz">
+                    <img src="https://images.unsplash.com/photo-1722204272233-d15cf38fb34e?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="DMZ Tour">
+                    <div class="card_content">
+                        <h3>DMZ Tour</h3>
+                        <p class="desc_short">
+                            A guided tour of the Demilitarized Zone between North and South Korea.
+                        </p>
+                        <p class="desc_full">
+                            The Korean Demilitarized Zone is a 250 km long, 4 km wide buffer established under the 1953 Armistice Agreement along the 38th parallel, heavily fortified yet home to rare wildlife sanctuaries. Guided excursions from Seoul visit the Joint Security Area (Panmunjom), the Third Infiltration Tunnel, and Dora Observatory, offering poignant insights into Korea's divided history.
+                        </p>
+                        <button class="more_btn">Read More</button>
+                        <a href="https://en.wikipedia.org/wiki/Korean_Demilitarized_Zone" target="_blank">Learn More</a>
+                    </div>
+                </article>
+                <article class="card" id="bulguksa">
+                    <img src="https://images.unsplash.com/photo-1684134549350-be5fd0d8feaa?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bulguksa Temple">
+                    <div class="card_content">
+                        <h3>Bulguksa Temple</h3>
+                        <p class="desc_short">
+                            An ancient Buddhist temple in Gyeongju, designated a UNESCO World Heritage site.
+                        </p>
+                        <p class="desc_full">
+                            Founded in 751 on Tohamsan in Gyeongju by Prime Minister Kim Daeseong, Bulguksa is a masterpiece of Silla-era Buddhist art, housing six National Treasures including the ornate Dabotap and Seokgatap pagodas. Inscribed as a UNESCO World Heritage site in 1995, its celebrated Blue Cloud and White Cloud Bridges and gilt-bronze Buddha statues welcome over two million pilgrims and tourists each year.
+                        </p>
+                        <button class="more_btn">Read More</button>
+                        <a href="https://en.wikipedia.org/wiki/Bulguksa" target="_blank">Learn More</a>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <section id="foods">
+            <h2>Must-Try Korean Foods</h2>
+            <div class="grid">
+
+            </div>
+        </section>
+
+        <section id="people">
+            <h2>Famous Koreans</h2>
+            <div class="grid">
+
+            </div>
+        </section>
+    </main>
+    <footer>
+        &copy; Made By Bengie M. Fernandez
     </footer>
     <script>
         document.querySelectorAll('.more_btn').forEach(btn => {
