shortened the desc of places

--- a/places.html
+++ b/places.html
@@ -18,10 +18,10 @@
             <div class="card_content">
                 <h3>Gyeongbokgung Palace</h3>
                 <p class="desc_short">
-                    The grandest of Seoul's Five Grand Palaces, built in 1395 and rebuilt after the Imjin War.
+                    The grandest Joseon dynasty palace, built in 1395.
                 </p>
                 <p class="desc_full">
-                    Gyeongbokgung, established in 1395 as the principal palace of the Joseon dynasty, was razed during the 1592 Imjin War and largely reconstructed from the 1990s onward to its former grandeur. Today, visitors explore its majestic Geunjeongkeon Throne Hall, the lotus-surrounded Hyangwoonjeong Pavilion, and can witness the daily Royal Guard Changing Ceremony.
+                    Commissioned by King Taejo and restored after 1592 Imjin War, featuring the Geunjeongjeon Throne Hall and lotus-surrounded Hyangwonjeong Pavilion.
                 </p>
                 <button class="more_btn">Read more</button>
                 <a href="https://en.wikipedia.org/wiki/Gyeongbokgung" target="_blank">Learn More</a>
@@ -35,7 +35,7 @@
                     Iconic observation tower offering panoramic views of Seoul's skyline.
                 </p>
                 <p class="desc_full">
-                    Built in 1971 as South Korea's first general radio-wave tower, N Seoul Tower rises 236.7 m above sea level atop Namsan Mountain and opened to the public in 1980. Its multiple observation decks, revolving restaurant, and famed "Locks of Love" terrace now draw over eight million visitors annually.
+                    Built in 1971 as South Korea's first general radio-wave tower. Its multiple observation decks, revolving restaurant, and famed "Locks of Love" terrace now draw over eight million visitors annually.
                 </p>
                 <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/N_Seoul_Tower" target="_blank">Learn More</a>
@@ -46,10 +46,10 @@
             <div class="card_content">
                 <h3>Bukchon Hanok Village</h3>
                 <p class="desc_short">
-                    A preserved area showcasing traditional Korean houses in the heart of Seoul.
+                    Historic neighborhood of 900+ traditional houses.
                 </p>
                 <p class="desc_full">
-                    Bukchon Hanok Village in Jongno, Seoul, preserves over 900 traditional hanok homes dating from the early 20th century, blending living heritage with artisan workshops and teahouses. To manage overtourism (6.4 million visitors in 2024), non-guesthouse visitors may now only enter between 10 a.m. and 5 p.m., respecting its roughly 6,100 residents.
+                    Preserved hanok area in Jongno, with time-slot visitor limits to protect local residents.
                 </p>
                 <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Bukchon_Hanok_Village" target="_blank">Learn More</a>
@@ -60,10 +60,10 @@
             <div class="card_content">
                 <h3>Jeju Island</h3>
                 <p class="desc_short">
-                    Volcanic island known for its beaches, lava tubes, and scenic landscapes.
+                    Volcanic island and UNESCO Global Geopark.
                 </p>
                 <p class="desc_full">
-                    Jeju Island, covering 1,833.2 km² as South Korea's largest island, is defined by its Hallasan shield volcano (1,950 m) and extensive lava tube networks designated as a UNESCO World Heritage Site. A subtropical climate, unique haenyeo women-diving traditions, and landmarks like Seongsan Ilchulbong and Cheonjiyeon Waterfall make it a premier honeymoon and eco-tourism destination.
+                    Home to Hallasan volcano, lava tubes, Seongsan Ilchubong, and unique haenyeo diving traditions.
                 </p>
                 <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Jeju_Island" target="_blank">Learn More</a>
@@ -91,7 +91,7 @@
                     An ancient Buddhist temple in Gyeongju, designated a UNESCO World Heritage site.
                 </p>
                 <p class="desc_full">
-                    Founded in 751 on Tohamsan in Gyeongju by Prime Minister Kim Daeseong, Bulguksa is a masterpiece of Silla-era Buddhist art, housing six National Treasures including the ornate Dabotap and Seokgatap pagodas. Inscribed as a UNESCO World Heritage site in 1995, its celebrated Blue Cloud and White Cloud Bridges and gilt-bronze Buddha statues welcome over two million pilgrims and tourists each year.
+                    Founded in 751 on Tohamsan in Gyeongju by Prime Minister Kim Daeseong. Inscribed as a UNESCO World Heritage site in 1995, its celebrated Blue Cloud and White Cloud Bridges and gilt-bronze Buddha statues welcome over two million pilgrims and tourists each year.
                 </p>
                 <button class="more_btn">Read More</button>
                 <a href="https://en.wikipedia.org/wiki/Bulguksa" target="_blank">Learn More</a>
