added people and minor adjustments

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
             </ul>
         </nav>
     </main>
-    <footer>
-        &copy; Made By Bengie M. Fernandez
-    </footer>
+    <footer>&copy; Made By Bengie M. Fernandez</footer>
 </body>
 </html>
