--- a/places.html
+++ b/places.html
@@ -14,7 +14,7 @@
 
     <main class="container grid">
         <article class="card">
-            <img src="https://plus.unsplash.com/premium_photo-1661948404806-391a240d6d40?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gyeongbokgung Palace">
+            <img src="pictures/gyeongbokgung palace.jpg" alt="Gyeongbokgung Palace">
             <div class="card_content">
                 <h3>Gyeongbokgung Palace</h3>
                 <p class="desc_short">
@@ -28,7 +28,7 @@
             </div>
         </article>
         <article class="card">
-            <img src="https://images.unsplash.com/photo-1635686692794-b0ce6337386b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="N Seoul Tower">
+            <img src="pictures/n seoul tower.jpeg" alt="N Seoul Tower">
             <div class="card_content">
                 <h3>N Seoul Tower</h3>
                 <p class="desc_short">
@@ -42,7 +42,7 @@
             </div>
         </article>
         <article class="card">
-            <img src="https://images.unsplash.com/photo-1670735411734-c9725326de3f?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bukchon Hanok Village">
+            <img src="pictures/bukchon hanok village.jpg" alt="Bukchon Hanok Village">
             <div class="card_content">
                 <h3>Bukchon Hanok Village</h3>
                 <p class="desc_short">
@@ -56,7 +56,7 @@
             </div>
         </article>
         <article class="card">
-            <img src="https://images.unsplash.com/photo-1612977512598-3b8d6a498bbb?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Jeju Island">
+            <img src="pictures/jeju island.jpg" alt="Jeju Island">
             <div class="card_content">
                 <h3>Jeju Island</h3>
                 <p class="desc_short">
@@ -70,7 +70,7 @@
             </div>
         </article>
         <article class="card">
-            <img src="https://images.unsplash.com/photo-1647767459550-1e35617029ec?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Haeundae Beach">
+            <img src="pictures/haeundae beach.jpg" alt="Haeundae Beach">
             <div class="card_content">
                 <h3>Haeundae Beach</h3>
                 <p class="desc_short">
@@ -84,7 +84,7 @@
             </div>
         </article>
         <article class="card">
-            <img src="https://images.unsplash.com/photo-1684134549350-be5fd0d8feaa?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bulguksa Temple">
+            <img src="pictures/bulguksa temple.jpg" alt="Bulguksa Temple">
             <div class="card_content">
                 <h3>Bulguksa Temple</h3>
                 <p class="desc_short">
