--- a/foods.html
+++ b/foods.html
@@ -13,7 +13,7 @@
     </header>
     <main class="container grid">
         <article class="card">
-            <img src="https://images.unsplash.com/photo-1698489857683-0d30f7f046f7?q=80&w=1534&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Kimchi">
+            <img src="pictures/kimchi.jpg" alt="Kimchi">
             <div class="card_content">
                 <h3>Kimchi</h3>
                 <p class="desc_short">
@@ -27,7 +27,7 @@
             </div>
         </article>
         <article class="card">
-            <img src="https://plus.unsplash.com/premium_photo-1671559022378-9898ca5d9516?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bibimbap">
+            <img src="pictures/bibimbap.jpg" alt="Bibimbap">
             <div class="card_content">
                 <h3>Bibimbap</h3>
                 <p class="desc_short">
@@ -41,7 +41,7 @@
             </div>
         </article>
         <article class="card">
-            <img src="https://images.unsplash.com/photo-1564836235910-c3055ca0f912?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bulgogi">
+            <img src="pictures/bulgogi.jpg" alt="Bulgogi">
             <div class="card_content">
                 <h3>Bulgogi</h3>
                 <p class="desc_short">
@@ -55,7 +55,7 @@
             </div>
         </article>
         <article class="card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Tteokbokki.JPG/250px-Tteokbokki.JPG" alt="Tteokbokki">
+            <img src="pictures/tteokbokki.jpg" alt="Tteokbokki">
             <div class="card_content">
                 <h3>Tteokbokki</h3>
                 <p class="desc_short">
